--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ loadProperties('build.properties')
 // add dependencies
 dependencies {
     compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.2.8.5-SNAPSHOT')
+    compile (dir: "./lib/", includes:['*.jar'])
     testCompile group: 'org.easymock', name: 'easymock', version: '3.3.1'
     compile fileTree(dir: vrldir+"/plugins/", includes:['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
